generated/nixidy/prod/readarr/Service-readarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: readarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: readarr
    app.kubernetes.io/service: readarr
  name: readarr
  namespace: dotfiles
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/controller: readarr
    app.kubernetes.io/instance: readarr
    app.kubernetes.io/name: readarr
  type: ClusterIP
