generated/nixidy/prod/readarr/HTTPRoute-readarr.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: readarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: readarr
  name: readarr
  namespace: dotfiles
spec:
  hostnames:
    - readarr.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: readarr
          namespace: dotfiles
          port: 80
          weight: 1
